<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">AetherPlayer</string>

    <string name="device_admin_description">
        Controls AetherPlayer dedicated-device operation.
    </string>

    <string name="spotify_tile_label">Spotify</string>

    <string name="bluetooth_tile_label">Bluetooth</string>
    <string name="bluetooth_tile_description">Open Bluetooth devices</string>
    <string name="bluetooth_no_devices">No devices connected</string>
    <string name="bluetooth_off">Bluetooth is off</string>

    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_back">Back</string>
    <string name="bluetooth_toggle_description">Bluetooth on or off</string>
    <string name="bluetooth_section_my_devices">My devices</string>
    <string name="bluetooth_section_available">Available devices</string>
    <string name="bluetooth_no_paired_devices">No paired devices</string>
    <string name="bluetooth_no_available_devices">No devices found</string>
    <string name="bluetooth_scanning">Scanning for devices…</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="bluetooth_stop_scan">Stop</string>
    <string name="bluetooth_status_connected">Connected</string>
    <string name="bluetooth_status_connecting">Connecting…</string>
    <string name="bluetooth_status_paired">Paired</string>
    <string name="bluetooth_status_available">Available</string>
    <string name="bluetooth_connect">Connect</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="bluetooth_forget">Forget</string>
    <string name="bluetooth_permission_missing">
        Bluetooth permission is missing.
    </string>
    <string name="bluetooth_toggle_failed">
        Unable to change Bluetooth power.
    </string>
    <string name="bluetooth_scan_failed">
        Unable to scan for devices.
    </string>
    <string name="bluetooth_pair_failed">
        Unable to pair with that device.
    </string>
    <string name="bluetooth_connect_pending">
        Connecting…
    </string>
    <string name="bluetooth_connect_failed">
        Unable to connect to that device.
    </string>
    <string name="bluetooth_connect_le_only">
        That device paired over Bluetooth LE. Forget it, put the earbuds in pairing mode, and pair again (not the -LE name).
    </string>
    <string name="bluetooth_disconnect_failed">
        Unable to disconnect that device.
    </string>
    <string name="bluetooth_forget_failed">
        Unable to forget that device.
    </string>
    <string name="bluetooth_pin_title">PIN for %1$s</string>
    <string name="bluetooth_pin_hint">PIN</string>
    <string name="bluetooth_pin_pair">Pair</string>
    <string name="bluetooth_pin_cancel">Cancel</string>

    <string name="wifi_tile_label">Wi-Fi</string>
    <string name="wifi_tile_description">Open Wi-Fi networks</string>
    <string name="wifi_not_connected">Not connected</string>
    <string name="wifi_off">Wi-Fi is off</string>

    <string name="battery_card_description">Battery status</string>
    <string name="battery_percent">%1$d%%</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_on_battery">On battery</string>
    <string name="battery_status_full">Fully charged</string>
    <string name="battery_status_charging_remaining">Charging · about %1$s</string>
    <string name="battery_time_hours">%1$d hr</string>
    <string name="battery_time_minutes">%1$d min</string>
    <string name="battery_time_hours_minutes">%1$d hr %2$d min</string>

    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_back">Back</string>
    <string name="wifi_toggle_description">Wi-Fi on or off</string>
    <string name="wifi_section_saved">Saved networks</string>
    <string name="wifi_section_available">Available networks</string>
    <string name="wifi_no_saved_networks">No saved networks</string>
    <string name="wifi_no_available_networks">No networks found</string>
    <string name="wifi_scanning">Scanning for networks…</string>
    <string name="wifi_scan">Scan</string>
    <string name="wifi_stop_scan">Stop</string>
    <string name="wifi_status_connected">Connected</string>
    <string name="wifi_status_connecting">Connecting…</string>
    <string name="wifi_status_saved">Saved</string>
    <string name="wifi_status_carrier">Carrier network</string>
    <string name="wifi_status_open">Open</string>
    <string name="wifi_status_secured">Secured</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_disconnect">Disconnect</string>
    <string name="wifi_forget">Forget</string>
    <string name="wifi_permission_missing">
        Wi-Fi permission is missing.
    </string>
    <string name="wifi_toggle_failed">
        Unable to change Wi-Fi power.
    </string>
    <string name="wifi_scan_failed">
        Unable to scan for networks.
    </string>
    <string name="wifi_connect_pending">
        Connecting…
    </string>
    <string name="wifi_connect_failed">
        Unable to connect to that network.
    </string>
    <string name="wifi_disconnect_failed">
        Unable to disconnect from that network.
    </string>
    <string name="wifi_forget_failed">
        Unable to forget that network.
    </string>
    <string name="wifi_forget_carrier">
        Carrier Wi-Fi cannot be forgotten.
    </string>
    <string name="wifi_unsupported">
        That network type is not supported.
    </string>
    <string name="wifi_password_title">Password for %1$s</string>
    <string name="wifi_password_hint">Password</string>
    <string name="wifi_password_connect">Connect</string>
    <string name="wifi_password_cancel">Cancel</string>
    <string name="wifi_password_invalid">
        Enter a password of at least 8 characters.
    </string>

    <string name="now_playing_idle">Nothing playing</string>
    <string name="now_playing_album_art">Album art</string>
    <string name="now_playing_play">Play</string>
    <string name="now_playing_pause">Pause</string>
    <string name="now_playing_previous">Previous track</string>
    <string name="now_playing_next">Next track</string>

    <string name="status_not_device_owner">
        AetherPlayer is not the Device Owner.
    </string>

    <string name="status_spotify_missing">
        Spotify is not installed.
    </string>

    <string name="status_spotify_launch_failed">
        Unable to open Spotify.
    </string>

    <string name="status_bluetooth_launch_failed">
        Unable to open Bluetooth.
    </string>

    <string name="status_wifi_launch_failed">
        Unable to open Wi-Fi.
    </string>

</resources>
